# test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: README.md  config.py  logging_config.py  main.py
tests/: test_main.py
